# spyoncino

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  TODO_ARCHITECTURE.md  TODO_CURRENT_ARCHITECTURE.md  docker-compose.yml  pyproject.toml  run.bat  run.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  tests.yml
apps/camera-discovery/: main.py
config/: config.yaml  secrets.json.example  secrets.yaml.example  setting.json  telegram.yaml
data/config/: recipe.yaml  secrets.yaml.example
dev/: DEVELOPMENT.md  README.md  SETUP.md  setup_dev.bat  setup_dev.sh
docker/: Caddyfile  Dockerfile.modular  compose.dev-ha.yaml  compose.modular.yaml  entrypoint.sh
docker/systemd/: spyoncino-modular.service
docs/: OPS_DASHBOARD.md  README.md  RUNBOOKS.md  architecture-backlog.md  configuration.md  face-recognition.md  ops.md  secrets-setup.md
scripts/: check_secrets_placeholders.py  run.bat  run.sh
src/spyoncino/: __init__.py  analytics.py  bot.py  capture.py  discovery_app.py  discovery_lan.py  discovery_scan.py  logging_redact.py  manager.py  media_store.py  orchestrator.py  orchestrator_entrypoint.py  recipe_builder_app.py  recipe_classes.py  recipe_paths.py  run.py  runtime.py  security.py  shared_theme_css.py
src/spyoncino/core/: __init__.py  bus.py  config.py  contracts.py  orchestrator.py
src/spyoncino/inference/: __init__.py  object_detection.py
src/spyoncino/input/: __init__.py  cam_grabber.py
src/spyoncino/interface/: __init__.py  api_client.py  authz.py  memory_manager.py  telegram_bot.py  webapp.py
src/spyoncino/interface/templates/: dashboard.html  login.html
src/spyoncino/legacy/: __init__.py  bot.py  capture.py  manager.py  run.py  security.py
src/spyoncino/modules/: __init__.py
src/spyoncino/modules/analytics/: __init__.py  db_logger.py  event_logger.py
src/spyoncino/modules/dashboard/: __init__.py  command_handler.py  control_api.py  recordings_service.py  telegram_bot.py  websocket_gateway.py
src/spyoncino/modules/event/: __init__.py  clip_builder.py  deduplicator.py  gif_builder.py  snapshot_writer.py
src/spyoncino/modules/input/: __init__.py  camera_sim.py  rtsp_camera.py  usb_camera.py
src/spyoncino/modules/output/: __init__.py  email_notifier.py  rate_limiter.py  telegram_notifier.py  webhook_notifier.py
src/spyoncino/modules/process/: __init__.py  detection_event_router.py  motion_detector.py  yolo_detector.py  zoning_filter.py
src/spyoncino/modules/status/: __init__.py  prometheus_exporter.py  resilience_tester.py
src/spyoncino/modules/storage/: __init__.py  retention.py  s3_uploader.py
src/spyoncino/postproc/: __init__.py  face_identification.py
src/spyoncino/preproc/: __init__.py  motion_detection.py
src/spyoncino/schemas/: __init__.py
src/spyoncino/templates/: discover.html  recipe_builder.html
tests/: README.md  __init__.py  conftest.py
tests/unit/: test_analytics.py  test_analytics_db_logger.py  test_analytics_logger.py  test_bus.py  test_bus_and_simulator_hardening.py  test_capture.py  test_clip_builder.py  test_command_handler.py  test_config.py  test_config_hot_reload.py  test_control_api.py  test_deduplicator.py  test_detection_event_router.py  test_detector_weights.py  test_discovery_lan.py  test_discovery_scan.py  test_dual_camera_pipeline.py  test_email_notifier.py  test_face_champion.py  test_first_pipeline.py  test_gif_builder.py  test_identity_uniqueness.py  test_logging_redact.py  test_motion_detector.py  test_notification_routing.py  test_orchestrator_health.py  test_orchestrator_hot_reload.py  test_orchestrator_runner.py  test_prometheus_exporter.py  test_rate_limiter.py  test_recipe_paths.py  test_recordings_service.py  test_resilience_tester.py  test_rtsp_camera.py  test_s3_uploader.py  test_storage_retention.py  test_telegram_control_bot.py  test_telegram_notifier.py  test_usb_camera.py  test_webhook_notifier.py  (+4 more)
