[project]
name = "spyoncino"
version = "0.0.1-alpha"
description = "AI-powered surveillance library for USB/RTSP cameras with real-time person detection, Telegram bot integration, and smart notifications."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Andrea"}
]
keywords = ["security", "surveillance", "ai", "yolo", "telegram", "motion-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.12.0.88",
    "python-telegram-bot[job-queue]==20.6",
    "ultralytics>=8.3.184",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

# PyTorch variants (CUDA/CPU) are selected via --index-url in launcher scripts

[project.scripts]
spyoncino = "spyoncino.run:main"

[project.urls]
Homepage = "https://github.com/AndreaMichielon/spyoncino"
Repository = "https://github.com/AndreaMichielon/spyoncino"
Issues = "https://github.com/AndreaMichielon/spyoncino/issues"
