[project]
name = "spyoncino"
version = "0.0.1-alpha"
description = "AI-powered surveillance library for USB/RTSP cameras with real-time person detection, Telegram bot integration, and smart notifications."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Andrea"}
]
keywords = ["security", "surveillance", "ai", "yolo", "telegram", "motion-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "dynaconf>=3.2.5",
    "fastapi>=0.115.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.12.0.88",
    "prometheus-client>=0.20.0",
    "pydantic>=2.7.0",
    "python-telegram-bot[job-queue]==20.6",
    "pyyaml>=6.0.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.21",
    "boto3>=1.35.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.3.184",
    "uvicorn>=0.30.0",
]

# PyTorch variants (CUDA/CPU) are selected via --index-url in launcher scripts

[project.scripts]
spyoncino = "spyoncino.orchestrator_entrypoint:main"
spyoncino-modular = "spyoncino.orchestrator_entrypoint:main"
spyoncino-legacy = "spyoncino.run:main"

[project.urls]
Homepage = "https://github.com/AndreaMichielon/spyoncino"
Repository = "https://github.com/AndreaMichielon/spyoncino"
Issues = "https://github.com/AndreaMichielon/spyoncino/issues"

[project.optional-dependencies]
dev = [
    "httpx>=0.25.0,<0.26.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.8.0",
    "pre-commit>=3.6.0",
    "bandit[toml]>=1.7.0",
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Set the maximum line length to 100.
line-length = 100
indent-width = 4
target-version = "py312"

# Exclude common directories
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "spyoncino_env",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]

# Disable specific rules if needed
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "PLR0912", # Too many branches (too strict for complex functions)
    "PLR0915", # Too many statements (too strict for complex functions)
    "B904",    # Exception chaining (too strict for existing code)
    "PLC0415", # Import not at top (intentional lazy imports)
    "RUF013",  # Implicit Optional (existing code style)
    "RUF001",  # Ambiguous Unicode (emojis are intentional)
    "E722",    # Bare except (existing error handling)
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces, rather than tabs
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Automatically detect the appropriate line ending
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["spyoncino"]

[tool.ruff.lint.per-file-ignores]
# Ignore import violations in __init__.py files
"__init__.py" = ["F401"]
# Ignore specific rules in test files
"tests/**/*.py" = ["PLR2004", "S101"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=spyoncino",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/spyoncino"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "src/spyoncino/legacy/*",
    "src/spyoncino/analytics.py",
    "src/spyoncino/bot.py",
    "src/spyoncino/capture.py",
    "src/spyoncino/manager.py",
    "src/spyoncino/run.py",
    "src/spyoncino/security.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "spyoncino_env", ".venv", "venv"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection_subprocess (often false positives)
