[project]
name = "spyoncino"
version = "0.0.1a0"
description = "AI-powered surveillance library for USB/RTSP cameras with real-time person detection, Telegram bot integration, and smart notifications."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Andrea"}
]
keywords = ["security", "surveillance", "ai", "yolo", "telegram", "motion-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "imageio>=2.37.0",
    "imageio-ffmpeg>=0.6.0",
    "matplotlib>=3.10.5",
    "numpy>=2.0.1,<3.0.0",
    "opencv-python>=4.12.0.88",
    "psutil>=6.0.0",
    "pyyaml>=6.0.0",
    "python-telegram-bot[job-queue]==20.6",
    "ultralytics>=8.3.184",
    "uvicorn[standard]>=0.24.0",
]

[project.scripts]
spyoncino = "spyoncino.orchestrator:main"

[project.urls]
Homepage = "https://github.com/AndreaMichielon/spyoncino"
Repository = "https://github.com/AndreaMichielon/spyoncino"
Issues = "https://github.com/AndreaMichielon/spyoncino/issues"
Changelog = "https://github.com/AndreaMichielon/spyoncino/blob/main/CHANGELOG.md"

[project.optional-dependencies]
# face — DeepFace + TensorFlow/tf-keras for face identification (see docs/face-recognition.md).
# dev — tests, lint, types. PyTorch is installed with ultralytics; pin GPU wheels separately if needed.
# TensorFlow 2.16+ needs tf-keras for DeepFace; without it import fails and face alerts never fire.
face = [
    "deepface>=0.0.93",
    "tf-keras>=2.16.0",
]
dev = [
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spyoncino = ["static/*.ico", "static/*.png", "templates/*.html"]
